Feat: redisign the skill section

--- a/index.html
+++ b/index.html
@@ -132,26 +132,131 @@
       </div>
     </section>
 
-    <!-- Skills -->
-    <section id="skills" class="py-20 bg-slate-50 dark:bg-slate-800/30">
-      <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="text-3xl font-bold mb-10">Skills</h2>
-        <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-3" data-stagger>
-          <span class="skill-tag" data-animate="fade-up">HTML</span>
-          <span class="skill-tag" data-animate="fade-up">CSS</span>
-          <span class="skill-tag" data-animate="fade-up">JavaScript</span>
-          <span class="skill-tag" data-animate="fade-up">TypeScript</span>
-          <span class="skill-tag" data-animate="fade-up">React</span>
-          <span class="skill-tag" data-animate="fade-up">Node.js</span>
-          <span class="skill-tag" data-animate="fade-up">TailwindCSS</span>
-          <span class="skill-tag" data-animate="fade-up">Next.js</span>
-          <span class="skill-tag" data-animate="fade-up">Express</span>
-          <span class="skill-tag" data-animate="fade-up">MongoDB</span>
-          <span class="skill-tag" data-animate="fade-up">PostgreSQL</span>
-          <span class="skill-tag" data-animate="fade-up">Docker</span>
-        </div>
-      </div>
-    </section>
+    	<!-- Skills -->
+    	<section id="skills" class="py-20 bg-slate-50 dark:bg-slate-800/30">
+      	<div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+        	<h2 class="text-3xl font-bold">Skills</h2>
+        	<p class="mt-2 text-slate-600 dark:text-slate-300">A snapshot of my core stack and proficiency.</p>
+        	<div class="mt-8 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5" data-stagger>
+          	<article class="skill-card" data-animate="fade-up">
+            	<div class="skill-card-head">
+              	<div class="skill-icon bg-orange-100 text-orange-600 dark:bg-orange-900/30 dark:text-orange-300">&#128187;</div>
+              	<div>
+                	<h3 class="text-base font-semibold">HTML</h3>
+                	<span class="text-xs text-slate-500 dark:text-slate-400">Expert</span>
+              	</div>
+            	</div>
+            	<div class="skill-meter" aria-label="HTML proficiency" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+              	<span style="width:95%"></span>
+            	</div>
+          	</article>
+
+          	<article class="skill-card" data-animate="fade-up" data-delay="0.05s">
+            	<div class="skill-card-head">
+              	<div class="skill-icon bg-blue-100 text-blue-600 dark:bg-blue-900/30 dark:text-blue-300">&#127912;</div>
+              	<div>
+                	<h3 class="text-base font-semibold">CSS</h3>
+                	<span class="text-xs text-slate-500 dark:text-slate-400">Advanced</span>
+              	</div>
+            	</div>
+            	<div class="skill-meter" aria-label="CSS proficiency" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              	<span style="width:90%"></span>
+            	</div>
+          	</article>
+
+          	<article class="skill-card" data-animate="fade-up" data-delay="0.1s">
+            	<div class="skill-card-head">
+              	<div class="skill-icon bg-yellow-100 text-yellow-600 dark:bg-yellow-900/30 dark:text-yellow-300">JS</div>
+              	<div>
+                	<h3 class="text-base font-semibold">JavaScript</h3>
+                	<span class="text-xs text-slate-500 dark:text-slate-400">Advanced</span>
+              	</div>
+            	</div>
+            	<div class="skill-meter" aria-label="JavaScript proficiency" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              	<span style="width:90%"></span>
+            	</div>
+          	</article>
+
+          	<article class="skill-card" data-animate="fade-up" data-delay="0.15s">
+            	<div class="skill-card-head">
+              	<div class="skill-icon bg-sky-100 text-sky-600 dark:bg-sky-900/30 dark:text-sky-300">TS</div>
+              	<div>
+                	<h3 class="text-base font-semibold">TypeScript</h3>
+                	<span class="text-xs text-slate-500 dark:text-slate-400">Advanced</span>
+              	</div>
+            	</div>
+            	<div class="skill-meter" aria-label="TypeScript proficiency" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+              	<span style="width:85%"></span>
+            	</div>
+          	</article>
+
+          	<article class="skill-card" data-animate="fade-up" data-delay="0.2s">
+            	<div class="skill-card-head">
+              	<div class="skill-icon bg-cyan-100 text-cyan-600 dark:bg-cyan-900/30 dark:text-cyan-300">&#128640;</div>
+              	<div>
+                	<h3 class="text-base font-semibold">React</h3>
+                	<span class="text-xs text-slate-500 dark:text-slate-400">Advanced</span>
+              	</div>
+            	</div>
+            	<div class="skill-meter" aria-label="React proficiency" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
+              	<span style="width:88%"></span>
+            	</div>
+          	</article>
+
+          	<article class="skill-card" data-animate="fade-up" data-delay="0.25s">
+            	<div class="skill-card-head">
+              	<div class="skill-icon bg-emerald-100 text-emerald-600 dark:bg-emerald-900/30 dark:text-emerald-300">&#128187;</div>
+              	<div>
+                	<h3 class="text-base font-semibold">Node.js</h3>
+                	<span class="text-xs text-slate-500 dark:text-slate-400">Advanced</span>
+              	</div>
+            	</div>
+            	<div class="skill-meter" aria-label="Node.js proficiency" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+              	<span style="width:85%"></span>
+            	</div>
+          	</article>
+
+          	<article class="skill-card" data-animate="fade-up" data-delay="0.3s">
+            	<div class="skill-card-head">
+              	<div class="skill-icon bg-teal-100 text-teal-600 dark:bg-teal-900/30 dark:text-teal-300">TW</div>
+              	<div>
+                	<h3 class="text-base font-semibold">TailwindCSS</h3>
+                	<span class="text-xs text-slate-500 dark:text-slate-400">Advanced</span>
+              	</div>
+            	</div>
+            	<div class="skill-meter" aria-label="TailwindCSS proficiency" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">
+              	<span style="width:92%"></span>
+            	</div>
+          	</article>
+
+          	<article class="skill-card" data-animate="fade-up" data-delay="0.35s">
+            	<div class="skill-card-head">
+              	<div class="skill-icon bg-slate-100 text-slate-700 dark:bg-slate-700/40 dark:text-slate-200">DB</div>
+              	<div>
+                	<h3 class="text-base font-semibold">PostgreSQL</h3>
+                	<span class="text-xs text-slate-500 dark:text-slate-400">Intermediate</span>
+              	</div>
+            	</div>
+            	<div class="skill-meter" aria-label="PostgreSQL proficiency" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+              	<span style="width:75%"></span>
+            	</div>
+          	</article>
+
+          	<article class="skill-card" data-animate="fade-up" data-delay="0.4s">
+            	<div class="skill-card-head">
+              	<div class="skill-icon bg-indigo-100 text-indigo-600 dark:bg-indigo-900/30 dark:text-indigo-300">Dx</div>
+              	<div>
+                	<h3 class="text-base font-semibold">Docker</h3>
+                	<span class="text-xs text-slate-500 dark:text-slate-400">Intermediate</span>
+              	</div>
+            	</div>
+            	<div class="skill-meter" aria-label="Docker proficiency" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+              	<span style="width:70%"></span>
+            	</div>
+          	</article>
+        	</div>
+      	</div>
+    	</section>
 
     <!-- Projects -->
     <section id="projects" class="py-20">
